
[project]
name = "np_nwb"
version = "0.1.0"
description = "Tools for quickly generating `.nwb` files from non-standard Mindscope Neuropixels experiments."
authors = [
    {name = "arjunsridhar12345", email = "arjun.sridhar@alleninstitute.org"},
    {name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org"},
    {name = "mochic", email = "chrism@alleninstitute.org"},
]
dependencies = [
    "allensdk",
    "pynwb",
    "np-eyetracking>=0.1.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
