[project]
name = "np_nwb"
version = "0.1.1"
description = "Tools for quickly generating `.nwb` files from non-standard Mindscope Neuropixels experiments."
authors = [
    { name = "arjunsridhar12345", email = "arjun.sridhar@alleninstitute.org" },
    { name = "bjhardcastle", email = "ben.hardcastle@alleninstitute.org" },
    { name = "mochic", email = "chrism@alleninstitute.org" },
]
dependencies = [
    "np-session",
    "allensdk",
    "pynwb",
    "np-eyetracking>=0.1.1",
    "np-nwb-trials==0.3.0",
    "np-tools>=0.1.16",
]
requires-python = ">=3.9"
readme = "README.md"

[project.license]
text = "MIT"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"
